feat: Enhance UI with animations and styling updates
Introduce fade-in-up animations for smoother content transitions and update the footer's color scheme to a darker, more modern aesthetic. These changes improve user experience and visual appeal across the application.

--- a/index.html
+++ b/index.html
@@ -46,6 +46,21 @@
       body {
         font-family: "Manrope", "Noto Sans KR", sans-serif;
       }
+      
+      @keyframes fadeInUp {
+        0% {
+          opacity: 0;
+          transform: translateY(30px);
+        }
+        100% {
+          opacity: 1;
+          transform: translateY(0);
+        }
+      }
+      
+      .animate-fade-in-up {
+        animation: fadeInUp 0.8s ease-out forwards;
+      }
     </style>
   <script type="importmap">
 {
