feat: Link to external project from homepage
Replaces the internal "Start" link with an external link to the "a 프로젝트" on Vercel. This change aims to direct users to a related project or demo. Also updates a comment in index.html for clarity.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </head>
   <body class="bg-gray-50 text-slate-900 antialiased">
     <div id="root"></div>
-    <!-- Vite will handle this TSX file and compile it for the browser -->
+    <!-- Vite transpiles this TSX file for the browser -->
     <script type="module" src="/index.tsx"></script>
   </body>
 </html>
